# chorus

./: .gitignore  .license_template  Cargo.toml  Makefile.toml  README.md
src/: cli.rs  config.rs  file_generator.rs  main.rs  utilities.rs
src/commands/: format.rs  init_new.rs  mod.rs
src/compilers/: gnucobol.rs  mod.rs
